# HR_Management_System

./: CMakeLists.txt  README.md
include/: Accountant.h  DatabaseManager.h  Director.h  Driver.h  HRAnalyzer.h  Human.h  IdentifierGenerator.h  Programmer.h  Secretary.h
src/: Accountant.cpp  DatabaseManager.cpp  Director.cpp  Driver.cpp  HRAnalyzer.cpp  IdentifierGenerator.cpp  Programmer.cpp  Secretary.cpp  main.cpp
